EDU-736 Fix upload screen overflow case

--- a/src/components/resource-picker/files-upload-screen.less
+++ b/src/components/resource-picker/files-upload-screen.less
@@ -1,5 +1,8 @@
 .FilesUploadScreen {
   height: 100%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto 1fr;
 }
 
 .FilesUploadScreen-headline {
@@ -35,7 +38,6 @@
 }
 
 .FilesUploadScreen-fileStatusContainer {
-  max-height: 100%;
   overflow: auto;
 }
 
